--- a/packages/cleaning/dreame_vacuum.yaml
+++ b/packages/cleaning/dreame_vacuum.yaml
@@ -328,3 +328,46 @@ script:
         continue_on_timeout: false
     mode: queued
     max: 10
+
+automation:
+  - alias: "Dreame Vacuum: Done Cleaning"
+    description: "Turn off all helper entities when vacuum is done cleaning"
+    mode: single
+    trigger:
+      - platform: event
+        event_type: dreame_vacuum_task_status
+        event_data:
+          entity_id: vacuum.xiaomi_robot_vacuum_x20
+          completed: true
+    condition: []
+    action:
+      - service: input_boolean.turn_off
+        target:
+          entity_id:
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_1
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_2
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_3
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_4
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_5
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_7
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_9
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_11
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_13
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_14
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_15
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_16
+            - input_boolean.xiaomi_robot_vacuum_x20_mopping_17
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_1
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_2
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_3
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_4
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_5
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_7
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_9
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_11
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_13
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_14
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_15
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_16
+            - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_17
+        data: {}
