--- a/packages/switch_triggers.yaml
+++ b/packages/switch_triggers.yaml
@@ -10,7 +10,7 @@ group:
   feeds_off_while_sleeping_without_auto_turn_on:
     name: Feeds off while sleeping
     entities:
-      - switch.bar_media_feed_bar_media_feed
+      - switch.bar_media_feed
 
 automation:
   ### Turn off feeds when Alarm is armed
