--- a/packages/3dprinter/bambu_x1c_legend.yaml
+++ b/packages/3dprinter/bambu_x1c_legend.yaml
@@ -16,15 +16,15 @@ automation:
           - conditions:
               - condition: or
                 conditions:
-                  - condition: state
-                    entity_id: fan.x1c_00m09a363000342_cooling_fan
-                    state: 'on'
-                  - condition: state
-                    entity_id: fan.x1c_00m09a363000342_aux_fan
-                    state: 'on'
+                  # - condition: state
+                  #   entity_id: fan.x1c_00m09a363000342_cooling_fan
+                  #   state: 'on'
+                  # - condition: state
+                  #   entity_id: fan.x1c_00m09a363000342_aux_fan
+                  #   state: 'on'
                   - condition: numeric_state
                     entity_id: sensor.x1c_00m09a363000342_bed_temperature
-                    above: 35
+                    above: 41
             sequence:
               - service: switch.turn_on
                 data:
