--- a/packages/cleaning/dreame_vacuum_automations.yaml
+++ b/packages/cleaning/dreame_vacuum_automations.yaml
@@ -2,10 +2,15 @@
 automation:
   - alias: "Dreame Vacuum: Daily Living Areas Clean"
     description: "Clean kitchen, lounge, front hall and living room at 4:50am"
+    id: dreame-vacuum-daily-clean-living-areas
     mode: single
     trigger:
       - platform: time
+        id: early_morning
         at: "04:50:00"
+      - platform: time
+        id: morning
+        at: "09:00:00"
     condition:
       - condition: or
         conditions:
@@ -24,19 +29,84 @@ automation:
             entity_id: input_boolean.floor_disaster_zone
             state: "on"
     action:
-      # Turn on lights in areas to be cleaned
-      - service: light.turn_on
-        target:
-          entity_id:
-            - light.kitchen_kitchen
-            - light.lounge_lounge
-            - light.lounge_dining
-        data: {}
-      - service: script.clean_room
-        data:
-          mode: Vacuum
-          room:
-            - "11"  # Kitchen
-            - "14"  # Lounge
-            - "13"  # Front Hall
-            - "17"  # Living Room
+      - choose:
+          # Early morning cleaning routine
+          - conditions:
+              - condition: trigger
+                id: early_morning
+            sequence:
+              # Turn on lights in areas to be cleaned
+              - service: light.turn_on
+                target:
+                  entity_id:
+                    - light.kitchen_kitchen
+                    - light.lounge_lounge
+                    - light.lounge_dining
+                data: {}
+              - service: script.clean_room
+                data:
+                  mode: Vacuum
+                  room:
+                    - "11"  # Kitchen
+                    - "14"  # Lounge
+                    - "13"  # Front Hall
+                    - "17"  # Living Room
+          
+          # Morning cleaning routine
+          ## Monday & Friday
+          - conditions:
+              - condition: trigger
+                id: morning
+              - condition: or
+                conditions:
+                  - condition: time
+                    weekday:
+                      - mon
+                      - fri
+            sequence:
+              - service: script.clean_room
+                data:
+                  mode: Vacuum
+                  room:
+                    - "2"   # Main Bedroom
+                    - "5"   # Hallway NW
+                    - "4"   # Hallway NE
+          ## Tuesday
+          - conditions:
+              - condition: trigger
+                id: morning
+              - condition: time
+                weekday: tue
+            sequence:
+              - service: script.clean_room
+                data:
+                  mode: Vacuum
+                  room:
+                    - "9"   # White Bathroom
+                    - "10"  # Spare Bedroom
+          ## Wednesday
+          - conditions:
+              - condition: trigger
+                id: morning
+              - condition: time
+                weekday: wed
+            sequence:
+              - service: script.clean_room
+                data:
+                  mode: Mop
+                  room:
+                    - "11"  # Kitchen
+                    - "14"  # Lounge
+          ## Thursday
+          - conditions:
+              - condition: trigger
+                id: morning
+              - condition: time
+                weekday: thu
+            sequence:
+              - service: script.clean_room
+                data:
+                  mode: Mop
+                  room:
+                    - "17"  # Living Room
+                    - "13"  # Front Hall
