--- a/packages/security/device_tacker_triggers.yaml
+++ b/packages/security/device_tacker_triggers.yaml
@@ -3,6 +3,14 @@
 binary_sensor:
   platform: template
   sensors:
+    pixel_8_phone_charging:
+      friendly_name: "Is Pixel 8 phone charging"
+      unique_id: pixel_8_phone_charging
+      value_template: >-
+        {{ is_state('sensor.pixel_8_battery_state', 'charging')
+          or is_state('sensor.pixel_8_battery_state', 'full')
+          or is_state('sensor.pixel_8_battery_state', 'not_charging') }}
+
     both_parent_phones_charging:
       friendly_name: "Is both parents phones charging"
       unique_id: both_parent_phones_charging
@@ -54,32 +62,32 @@ automation:
         data:
           entity_id: alarm_control_panel.home_alarm
 
-  - alias: Parents both in bed when both phones charge need bypass
-    description: Parents both in bed when both phones charge
-    trigger:
-      - entity_id: binary_sensor.both_parent_phones_charging
-        platform: state
-        to: 'on'
-    condition:
-      - condition: state
-        entity_id: binary_sensor.both_parent_phones_charging
-        state: 'on'
-      - condition: state  # 'night' condition: from sunset until sunrise
-        entity_id: sun.sun
-        state: 'below_horizon'
-      - condition: state
-        entity_id: alarm_control_panel.home_alarm
-        state: disarmed
-      - condition: state
-        entity_id: binary_sensor.front_beam
-        state: 'on'
-        for:
-          minutes: 1
-    action:
-      # - service: envisalink.alarm_keypress
-      #   data_template:
-      #     entity_id: alarm_control_panel.home_alarm
-      #     keypress: '*125#'
-      - service: alarm_control_panel.alarm_arm_home
-        data:
-          entity_id: alarm_control_panel.home_alarm
+  # - alias: Parents both in bed when both phones charge need bypass
+  #   description: Parents both in bed when both phones charge
+  #   trigger:
+  #     - entity_id: binary_sensor.both_parent_phones_charging
+  #       platform: state
+  #       to: 'on'
+  #   condition:
+  #     - condition: state
+  #       entity_id: binary_sensor.both_parent_phones_charging
+  #       state: 'on'
+  #     - condition: state  # 'night' condition: from sunset until sunrise
+  #       entity_id: sun.sun
+  #       state: 'below_horizon'
+  #     - condition: state
+  #       entity_id: alarm_control_panel.home_alarm
+  #       state: disarmed
+  #     - condition: state
+  #       entity_id: binary_sensor.front_beam
+  #       state: 'on'
+  #       for:
+  #         minutes: 1
+  #   action:
+  #     # - service: envisalink.alarm_keypress
+  #     #   data_template:
+  #     #     entity_id: alarm_control_panel.home_alarm
+  #     #     keypress: '*125#'
+  #     - service: alarm_control_panel.alarm_arm_home
+  #       data:
+  #         entity_id: alarm_control_panel.home_alarm
