--- a/packages/security/alarm_notifications.yaml
+++ b/packages/security/alarm_notifications.yaml
@@ -286,6 +286,9 @@ automation:
       - condition: template
         value_template: >
           {{ trigger.from_state != None }}
+      - condition: template
+        value_template: >
+          {{ trigger.from_state.state != "unavailable" }}
     action:
       - service: script.log
         data:
