--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,6 +20,7 @@ frontend:
   themes: !include_dir_merge_named themes
 http: !include includes/http.yaml
 
+api:
 # Logging and history
 
 # ########################################
