update custom_components/ via HACS

--- a/custom_components/midea_ac/manifest.json
+++ b/custom_components/midea_ac/manifest.json
@@ -13,7 +13,7 @@
     "msmart"
   ],
   "requirements": [
-    "msmart-ng>=2025.1.0"
+    "msmart-ng==2025.2.1"
   ],
-  "version": "2025.1.4"
+  "version": "2025.2.1"
 }
