--- a/packages/energy/eskomsepush.yaml
+++ b/packages/energy/eskomsepush.yaml
@@ -251,14 +251,26 @@ automation:
             Loadshedding slot in 15 minutes
 
   - alias: Reload "Load Shedding"
-    description: ""
+    description: "Reloads the integration every night to work around Issue #70/#71"
     trigger:
       - platform: time
         at: "00:00:00"
     condition: []
-    action:
-      - service: homeassistant.reload_config_entry
-        data: {}
-        target:
-          device_id: 557a41e60d82eecee1b78dda2ca59762
+    actions:
+      - variables:
+          config_entry: "{{ config_entry_id(integration_entities(\"Load Shedding\") | first) }}"
+      - alias: Config entry found?
+        if:
+          - condition: template
+            value_template: "{{ config_entry != None }}"
+            alias: Config Entry var is set
+        then:
+          - data:
+              entry_id: "{{ config_entry }}"
+            action: homeassistant.reload_config_entry
+            alias: Reload Config Entry
+        else:
+          - alias: Config Entry not Found
+            stop: Config entry for Load Shedding not found
+            error: true
     mode: single
