--- a/custom_components/bambu_lab/manifest.json
+++ b/custom_components/bambu_lab/manifest.json
@@ -18,6 +18,7 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/greghesp/ha-bambulab/issues",
   "requirements": [
+    "beautifulsoup4",
     "cloudscraper"
   ],
   "ssdp": [
@@ -25,5 +26,5 @@
       "st": "urn:bambulab-com:device:3dprinter:1"
     }
   ],  
-  "version": "2.1.5"
+  "version": "2.1.7"
 }
